@@ -1,3 +1,6 @@
+13-08-2004 :
+ - general : implemented command completion and interactive help.
+
 06-08-2004 :
  - wxbRestorePanel : now parsing '+' sent by the director when building
      tree.
